<resources>
    <string name="app_name">RoomDatabase</string>
    <string name="edit">edit</string>
    <string name="user_updated">User Updated</string>
    <string name="add">Add</string>
    <string name="close">Close</string>

    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="city">City</string>
    <string name="phone">Phone</string>
</resources>
